# computational-capacity

./: .gitignore  README.md  main.py  pyproject.toml
comp_capacity/: __init__.py  main.py  save.py
comp_capacity/optim/: genetic_evolution.py  random_sample.py  run.py
comp_capacity/repr/: __init__.py  network.py  uid.py  util.py
comp_capacity/sim/: pattern_complete.py  task.py
docs/: project-outline.md
notebooks/playground/: block_off_diag_RNN.ipynb  cartpole_vanillaRNN.ipynb  network_from_connectivity_matrix.ipynb  pattern_completion_envs.ipynb  randomSampler.ipynb
notebooks/tests/: test_env_with_time.ipynb  test_network_sampling_with_env.ipynb
scripts/model_runs/: run_evolutionary_algo.sh  run_random_sampling_seq.sh
scripts/tests/: test_block_dup.py  test_network_compression.py  test_optim_run.py
