[project]
name = "computational-capacity"
authors = [
    {name = "Winthrop Gillis", email = "win.gillis@gmail.com"},
    {name = "Richard Hakim", email = "richhakim@gmail.com"}
]
version = "0.1.0"
description = "A library to explore the relationship betwen topology and computation in neural networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comp_capacity"]
