[project]
name = "computational-capacity"
authors = [
    {name = "Winthrop Gillis", email = "win.gillis@gmail.com"},
    {name = "Richard Hakim", email = "richhakim@gmail.com"}
]
version = "0.1.0"
description = "A library to explore the relationship betwen topology and computation in neural networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.0",
    "networkx>=3.4.2",
    "zarr>=3.0.7",
    "pyarrow>=19.0.1",
    "umap-learn>=0.5.7",
    "xxhash>=3.5.0",
    "toolz>=1.0.0",
    "tyro>=0.9.20",
    "ale-py>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.6",
]


[project.scripts]
topology-learn = "comp_capacity.main:main"


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comp_capacity"]
